--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "version": 2,
-    "name": "backcst",
+    "name": "tuto",
     "builds": [
-        {"src": "app.js", "use": "@vercel/node"}
+      { "src": "server.js", "use": "@vercel/node" }
     ],
     "routes": [
-        {"src": "/(.*)", "dest": "app.js"}
+      { "src": "/(.*)", "dest": "/server.js" }
     ]
 }
